# pytorch-flutter-FFI-example

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pytorch_flutter_ffi_example/: MainActivity.kt
assets/ml_models/: functional_external_model.pt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: const.dart  main.dart  ml_service.dart  native_communicator_service.dart  utils.dart
native_pytorch/: README.md  pubspec.yaml
native_pytorch/android/: CMakeLists.txt  build.gradle
native_pytorch/example/: pubspec.yaml
native_pytorch/example/android/app/: build.gradle
native_pytorch/example/android/app/src/debug/: AndroidManifest.xml
native_pytorch/example/android/app/src/main/: AndroidManifest.xml
native_pytorch/example/android/app/src/main/kotlin/com/example/native_pytorch_example/: MainActivity.kt
native_pytorch/example/ios/Runner/: Info.plist
native_pytorch/example/ios/Runner.xcodeproj/: project.pbxproj
native_pytorch/example/lib/: main.dart
native_pytorch/example/test/: widget_test.dart
native_pytorch/ios/: native_pytorch.podspec
native_pytorch/ios/Classes/: native_pytorch.cpp
native_pytorch/lib/: cString.dart  native_pytorch.dart
native_pytorch/test/: native_pytorch_method_channel_test.dart  native_pytorch_test.dart
test/: widget_test.dart
